crates/toml_edit/tests/snapshots/invalid/float/exp-leading-us.stderr
TOML parse error at line 1, column 20
  |
1 | exp-leading-us = 1e_23
  |                    ^
`_` may only go between digits
